# MidiNoteToProgramChange

./: .gitignore  Cargo.toml  README.md  build.bat  build.ps1  build.sh
src/: lib.rs
xtask/src/: main.rs
