[package]
name = "midi_note_to_pc"
version = "0.1.0"
edition = "2021"
authors = ["Nico"]
description = "A VST3/CLAP plugin that converts MIDI notes to Program Change messages"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[profile.release]
lto = "thin"
strip = "symbols"

[workspace]
members = ["xtask"]
